# ecephys_spike_sorting

./: .gitignore  README.md  ece_attributes_template.yaml  pyproject.toml  setup.py
ecephys_spike_sorting/modules/catGT_helper/: __main__.py
ecephys_spike_sorting/modules/prePhy_filters/: __main__.py  _schemas.py
ecephys_spike_sorting/modules/tPrime_helper/: __main__.py
ecephys_spike_sorting/scripts/: create_input_json.py  sglx_multi_run_pipeline.py
ecephys_spike_sorting/scripts/helpers/: SpikeGLX_utils.py  run_one_probe.py
ecephys_spike_sorting/utils/: catgt_params.py  path_collector.py
